# daccountd

./: .gitignore  Cargo.toml  Makefile  README.md  annotate.go  build.rs  build.sh  config.toml  daccountd.service  go.mod  go.sum  handle.go  ldap.go  main.go  schema.go  schema.yml  server.go  test.ldif
.github/workflows/: release.yml
go/: etcd.go
src/: main.rs
