[package]
name = "daccountd"
version = "0.1.0"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
env_logger = "0.8.3"
gethostname = "0.2.1"
log = "0.4.14"
serde = "1.0.123"
serde_derive = "1.0.123"
toml = "0.5.8"

[build-dependencies]
bindgen = "0.57.0"
